# drvr

./: .gitignore  .rosinstall  README.md  TRAINING.md  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml
cvtmodel/: .gitignore  README.md  path.py  predict.py
ml/: .gitignore  convertModel.py  gpstokml.py  label.py  predict.py  split.py  steer.tflite  train.py
robot/: .gitignore  drive.py  dummyops.py  operationsv1.py  page.mako  predict.py  robot  robot.py  robotv1.py  robotv2.py  web.py
scripts/: syncrobot.py
segment/: .gitignore  model.py  predict.py  savemodel.py  train.py
src/drvr_description/: CMakeLists.txt  package.xml
src/drvr_description/launch/: display.launch.py
src/drvr_description/src/description/: drvr_description.urdf
src/rvr/: package.xml  setup.cfg  setup.py
src/rvr/config/: drvr_description.urdf  ekf.yaml  map.yaml  ros2_control_controllers.yaml
src/rvr/launch/: controller_manager.launch.py  drvr_model.launch.py  nav.launch.py  startup.launch.py  test_cm.launch.py  test_cm.py
src/rvr/rvr/: rvr.py  rvr_io.py
src/rvr_hw_interface/: CMakeLists.txt  package.xml  rvr_hw_interface.xml
src/rvr_hw_interface/include/rvr_hw_interface/: rvr_hw_interface.hpp
src/rvr_hw_interface/src/: rvr_hw_interface.cpp
src/rvr_interfaces/: CMakeLists.txt  package.xml
src/rvr_interfaces/msg/: Encoders.msg  Orientation.msg  Position.msg  Raw.msg  Vector2.msg
web/: README.md  angular.json  package.json  proxy.conf.json
web/src/: index.html
web/src/app/: app.component.html  app.component.scss  app.component.ts  app.module.ts  robot.service.ts
