[tool.poetry]
name = "drvr_ros"
version = "0.1.0"
description = ""
authors = ["Daryll Strauss"]

[tool.poetry.dependencies]
python = "^3.10"
sphero-sdk = {path = "sphero_sdk-1.0.0-py3-none-any.whl"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
