<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rvr</name>
  <version>0.0.1</version>
  <description>ROS2 Package for Sphero RVR</description>
  <maintainer email="daryll.strauss@gmail.com">daryll</maintainer>
  <license>Attribution-NonCommercial-ShareAlike 4.0 International</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sphero_sdk</exec_depend>
  <exec_depend>rvr_interfaces</exec_depend>
  <exec_depend>tf_transformation</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
